# Infant

./: .gitignore  README.md
run/: clear_infant_count.sh  infant_launch.py  run.sh  run_infant.sh
src/infant/: package.xml  setup.cfg  setup.py
src/infant/infant/: centroid_tracker.py  infant_ear.py  infant_eye.py  infant_pulse.py  infant_state_server.py  infant_touch.py  infant_visualizer.py  readme  utils.py
src/infant/infant/FaceBoxes/: face_detector.py
src/infant/infant/FaceBoxes/data/: __init__.py  config.py  data_augment.py  wider_voc.py
src/infant/infant/FaceBoxes/layers/functions/: prior_box.py
src/infant/infant/FaceBoxes/layers/modules/: multibox_loss.py
src/infant/infant/FaceBoxes/utils/: box_utils.py
src/infant/launch/: infant.launch.py
src/infant_interfaces/: CMakeLists.txt  package.xml
src/infant_interfaces/msg/: InfantState.msg
